update test cases and add logging