@@ -32,7 +32,9 @@ import io.tabular.iceberg.connect.events.TableName;
 import io.tabular.iceberg.connect.events.TopicPartitionOffset;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.iceberg.DataFile;
 import org.apache.iceberg.DataFiles;
@@ -43,6 +45,7 @@ import org.apache.iceberg.FileMetadata;
 import org.apache.iceberg.PartitionSpec;
 import org.apache.iceberg.catalog.TableIdentifier;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableList;
+import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.types.Types.StructType;
 import org.apache.iceberg.util.Pair;
 import org.junit.jupiter.api.Test;
@@ -119,79 +122,78 @@ public class CommitStateTest {
     List<List<Envelope>> actual = commitState.tokenize(input.first());
 
     assertThat(actual.size()).isEqualTo(input.second());
+
+    actual.forEach(x -> assertThat(x).isNotEmpty());
   }
 
   private static Stream<Pair<List<Envelope>, Integer>> envelopeListProvider() {
     return Stream.of(
         Pair.of(
             Arrays.asList(
-                wrapInEnvelope(FileContent.EQUALITY_DELETES),
-                wrapInEnvelope(FileContent.EQUALITY_DELETES),
-                wrapInEnvelope(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES))),
             1),
         Pair.of(
             Arrays.asList(
-                wrapInEnvelope(FileContent.POSITION_DELETES),
-                wrapInEnvelope(FileContent.EQUALITY_DELETES),
-                wrapInEnvelope(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES))),
             2),
         Pair.of(
             Arrays.asList(
-                wrapInEnvelope(FileContent.POSITION_DELETES),
-                wrapInEnvelope(FileContent.POSITION_DELETES),
-                wrapInEnvelope(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES))),
             1),
         Pair.of(
             Arrays.asList(
-                wrapInEnvelope(FileContent.POSITION_DELETES),
-                wrapInEnvelope(FileContent.EQUALITY_DELETES),
-                wrapInEnvelope(FileContent.POSITION_DELETES),
-                wrapInEnvelope(FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.EQUALITY_DELETES))),
             3),
         Pair.of(
             Arrays.asList(
-                wrapInEnvelope(FileContent.DATA),
-                wrapInEnvelope(FileContent.DATA),
-                wrapInEnvelope(FileContent.DATA),
-                wrapInEnvelope(FileContent.DATA)),
-            1));
+                wrapInEnvelope(ImmutableList.of(FileContent.DATA, FileContent.POSITION_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.DATA, FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.DATA, FileContent.EQUALITY_DELETES)),
+                wrapInEnvelope(ImmutableList.of(FileContent.DATA, FileContent.EQUALITY_DELETES))),
+            2));
   }
 
-  private static Envelope wrapInEnvelope(FileContent fileContent) {
+  private static Envelope wrapInEnvelope(List<FileContent> fileContents) {
     final UUID payLoadCommitId = UUID.fromString("4142add7-7c92-4bbe-b864-21ce8ac4bf53");
     final TableIdentifier tableIdentifier = TableIdentifier.of("db", "tbl");
     final TableName tableName = TableName.of(tableIdentifier);
     final String groupId = "some-group";
 
-    List<DeleteFile> deleteFiles =
-        (fileContent == FileContent.DATA)
-            ? List.of()
-            : (fileContent == FileContent.EQUALITY_DELETES)
-                ? ImmutableList.of(
-                    FileMetadata.deleteFileBuilder(PartitionSpec.unpartitioned())
-                        .ofEqualityDeletes(1)
-                        .withPath("delete.parquet")
-                        .withFileSizeInBytes(10)
-                        .withRecordCount(1)
-                        .build())
-                : ImmutableList.of(
-                    FileMetadata.deleteFileBuilder(PartitionSpec.unpartitioned())
-                        .ofPositionDeletes()
-                        .withPath("delete.parquet")
-                        .withFileSizeInBytes(10)
-                        .withRecordCount(1)
-                        .build());
+    List<DeleteFile> deleteFiles = Lists.newLinkedList();
+    List<DataFile> dataFiles = Lists.newLinkedList();
 
-    List<DataFile> dataFiles =
-        (fileContent == FileContent.DATA)
-            ? ImmutableList.of(
-                DataFiles.builder(PartitionSpec.unpartitioned())
-                    .withPath("data.parquet")
-                    .withFormat(FileFormat.PARQUET)
-                    .withFileSizeInBytes(100L)
-                    .withRecordCount(5)
-                    .build())
-            : List.of();
+    Map<FileContent, List<FileContent>> fileMap = fileContents.stream()
+            .collect(Collectors.groupingBy(f -> f));
+
+    fileMap.getOrDefault(FileContent.DATA, ImmutableList.of()).forEach(x -> dataFiles.add(DataFiles.builder(PartitionSpec.unpartitioned())
+            .withPath("data.parquet")
+            .withFormat(FileFormat.PARQUET)
+            .withFileSizeInBytes(100L)
+            .withRecordCount(5)
+            .build()));
+
+    fileMap.getOrDefault(FileContent.EQUALITY_DELETES, ImmutableList.of()).forEach(x -> deleteFiles.add(FileMetadata.deleteFileBuilder(PartitionSpec.unpartitioned())
+            .ofEqualityDeletes(1)
+            .withPath("delete.parquet")
+            .withFileSizeInBytes(10)
+            .withRecordCount(1)
+            .build()));
+
+    fileMap.getOrDefault(FileContent.POSITION_DELETES, ImmutableList.of()).forEach(x -> deleteFiles.add(FileMetadata.deleteFileBuilder(PartitionSpec.unpartitioned())
+            .ofPositionDeletes()
+            .withPath("delete.parquet")
+            .withFileSizeInBytes(10)
+            .withRecordCount(1)
+            .build()));
 
     return new Envelope(
         new Event(
